--- a/Beacon-secure.html
+++ b/Beacon-secure.html
@@ -12,7 +12,7 @@
         <nav>
             <div class="logo">
                  <img src="beaconsecure3.png" >
-                 HighlySecure
+                 BeaconSecure
             </div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
@@ -29,9 +29,9 @@
         <section id="home" class="hero">
             <div class="hero-content">
                 <h1>Tourist Safety Monitoring</h1>
-                <p>AI-powered safety ecosystem ensuring secure travel experiences with real-time monitoring, blockchain ID verification, and instant emergency response.</p>
+                <p>AI-powered safety ecosystem ensuring secure travel experiences with real-time monitoring, blockchain identity verification, and instant emergency response.</p>
                 <div class="cta-buttons">
-                    <a href="#demo" class="btn btn-primary">App features</a>
+                    <a href="#demo" class="btn btn-primary">Mobile App Features</a>
                     <a href="#features" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
